--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     </head>
 
   <body style="background:#e9ebee">
-  <nav class="navbar navbar-expand-lg sticky-top navbar-light" style="background-color: #fff;color:white">
+  <nav class="navbar navbar-expand-lg sticky-top Fnavbar-light" style="background-color: #fff;color:white">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
   <span class="navbar-toggler-icon"></span>
   </button>
