--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -20,6 +20,13 @@
       <%= image_tag @post.image.url, style:"width:500px" %>
       </p>
       <%= link_to 'Back', posts_path,class:'btn btn-primary' %>
+      <% unless @post.user_id == current_user.id %>
+        <% if @favorite.present? %>
+          <%= link_to 'Cancel favorite', favorite_path(id: @favorite.id), method: :delete, class: 'btn btn-danger' %>
+          <% else %>
+          <%= link_to 'Make it a favorite', favorites_path(post_id: @post.id), method: :post, class: 'btn btn-primary' %>
+        <% end %>
+      <% end %>
     </div>
   <div id="right"></div>
   </div>
